%% Domain: Tasks, Lessons & Curriculum (UK-first)
erDiagram
    CURRICULUM_SUBJECTS {
        string id PK "ULID. Example: 01HSUBJUKMATHS"
        string country_code "ISO code. Example: UK"
        string key UK "Subject key. Example: maths"
        string title "Display title. Example: Mathematics"
        int created_at "Epoch ms created"
        int updated_at "Epoch ms updated"
    }

    CURRICULUM_TOPICS {
        string id PK "ULID. Example: 01HCURRABC"
        string subject "Subject key. Example: maths"
        string subject_id FK "FK → curriculum_subjects.id"
        string code UK "Curriculum code. Example: MATH.KS2.N1"
        string title "Short title. Example: Place Value"
        string description "Long description (optional)"
        string grade_band "KS1|KS2|KS3. Example: KS2"
        int recommended_age_min "Guidance only (years). Example: 7"
        int recommended_age_max "Guidance only (years). Example: 11"
        int created_at "Epoch ms created"
        int updated_at "Epoch ms updated"
    }

    CURRICULUM_PREREQS {
        string id PK "ULID. Example: 01HPREREQ1"
        string from_topic_id FK "FK → curriculum_topics.id (requires)"
        string to_topic_id FK "FK → curriculum_topics.id (is prerequisite)"
        int created_at "Epoch ms created"
    }

    LESSON_TEMPLATES {
        string id PK "ULID. Example: 01HLTMPLAB"
        string topic_id FK "FK → curriculum_topics.id"
        string title "Template. Example: Place Value — Tens & Ones"
        string asset_id FK "FK → assets.id (explanation/notes asset)"
        string overview_json "Optional inline overview JSON"
        string style "story|visual|puzzle|experiment. Example: story"
        int difficulty "1..5 (relative). Example: 2"
        int time_limit_ms "Suggested total time (nullable)"
        int order_id "Display order (nullable)"
        string status "active|archived. Example: active"
        string created_by "ai|user. Example: ai"
        string created_by_user_id FK "FK → users.id (nullable if ai)"
        int created_at "Epoch ms created"
        int updated_at "Epoch ms updated"
    }

    LESSON_INSTANCES {
        string id PK "ULID. Example: 01HLINSTAB"
        string lesson_template_id FK "FK → lesson_templates.id"
        string child_id FK "FK → children.id (personalised recipient)"
        string title "Personalised title (drawn from child interests/observations; optional override of template title)"
        string style "story|visual|puzzle|experiment"
        int difficulty "1..5"
        string personalization_params_json "JSON snapshot of parameters/profile used"
        string created_by_user_id FK "FK → users.id (nullable)"
        string status "draft|active|archived"
        int created_at "Epoch ms created"
        int updated_at "Epoch ms updated"
    }

    TASK_TEMPLATES {
        string id PK "ULID. Example: 01HTMPLABC"
        string topic_id FK "FK → curriculum_topics.id"
        string lesson_template_id FK "FK → lesson_templates.id (nullable)"
        string title "Template title. Example: Two-digit addition with carry"
        string style "story|visual|puzzle|experiment. Example: visual"
        int difficulty "1..5 (relative). Example: 3"
        int time_limit_ms "Per-task time limit (nullable for untimed)"
        string depends_on_id FK "FK → task_templates.id (nullable; sequencing/dependency)"
        int order_id "Display/sequence order (nullable)"
        string asset_id FK "FK → assets.id (template description/examples)"
        string created_by "ai|user. Example: user"
        string created_by_user_id FK "FK → users.id (nullable if ai)"
        string status "active|archived. Example: active"
        int created_at "Epoch ms created"
        int updated_at "Epoch ms updated"
    }

    TASK_INSTANCES {
        string id PK "ULID. Example: 01HTASKINS"
        string task_template_id FK "FK → task_templates.id (nullable for manual)"
        string task_set_instance_id FK "FK → task_set_instances.id (nullable)"
        string child_id FK "FK → children.id"
        string role "example|practice|assessment. Example: practice"
        string title "Task title. Example: Add two-digit numbers"
        string style "story|visual|puzzle|experiment. Example: visual"
        int difficulty "1..5 (relative difficulty). Example: 3"
        string asset_id FK "FK → assets.id (task definition JSON/PDF)"
        string solution_asset_id FK "FK → assets.id (step-by-step solution/explanation or explanation asset)"
        string created_by "ai|user. Example: ai"
        string created_by_user_id FK "FK → users.id (nullable if ai)"
        string status "active|archived. Example: active"
        int created_at "Epoch ms created"
        int updated_at "Epoch ms updated"
    }

    TASK_SET_TEMPLATES {
        string id PK "ULID. Example: 01HSETABC"
        string type "exam|quiz|sequence. Example: exam"
        string title "Set title. Example: KS2 Arithmetic Mock A"
        string description "Optional notes"
        int time_limit_ms "Total time limit (nullable for untimed)"
        float passing_score "0..1 threshold (nullable)"
        string status "active|archived. Example: active"
        string created_by "ai|user. Example: user"
        string created_by_user_id FK "FK → users.id (nullable if ai)"
        int created_at "Epoch ms created"
        int updated_at "Epoch ms updated"
    }

    TASK_ITEM_TEMPLATES {
        string id PK "ULID. Example: 01HITEMTMP1"
        string task_template_id FK "FK → task_templates.id"
        int order_id "Display order within the task (1‑based)"
        int points "Score weight per item (nullable)"
        int time_limit_ms "Per-item time limit (nullable)"
        string depends_on_id FK "FK → task_item_templates.id (nullable; sequence dependency)"
        string asset_id FK "FK → assets.id (optional supporting asset)"
        string question_json "Inline question template (JSON; optional)"
        string config_json "Configuration for the template (JSON; optional)"
        string answer_json "Expected answer for auto-marked items (JSON; optional)"
        int created_at "Epoch ms created"
    }

    TASK_SET_INSTANCES {
        string id PK "ULID. Example: 01HSETINS1"
        string set_template_id FK "FK → task_set_templates.id (nullable for ad-hoc)"
        string lesson_instance_id FK "FK → lesson_instances.id"
        string child_id FK "FK → children.id"
        string type "exam|quiz|sequence"
        string title "Instance title (optional)"
        string description "Optional notes"
        int time_limit_ms "Total time (nullable)"
        float passing_score "0..1 threshold (nullable)"
        string status "draft|running|completed|canceled"
        string created_by_user_id FK "FK → users.id (nullable)"
        int started_at "Epoch ms (nullable)"
        int completed_at "Epoch ms (nullable)"
        int created_at "Epoch ms created"
        int updated_at "Epoch ms updated"
    }

    TASK_ITEM_INSTANCES {
        string id PK "ULID. Example: 01HITEMINS1"
        string task_instance_id FK "FK → task_instances.id"
        string task_item_template_id FK "FK → task_item_templates.id (nullable; which template item this came from)"
        int order_index "0‑based display order"
        int points "Score weight per item (nullable)"
        int item_time_limit_ms "Per-item time limit (nullable)"
        string answer_type "numeric|text|multiple_choice|expression|sequence"
        string depends_on_id FK "FK → task_item_instances.id (nullable)"
        string question_json "Inline question (resolved)"
        string config_json "Resolved config"
        string answer_json "Resolved expected answer"
        int created_at "Epoch ms created"
    }

    %% USERS and ASSETS are defined in onboarding ERD; referenced here only.

    %% Relationships
    CURRICULUM_SUBJECTS ||--o{ CURRICULUM_TOPICS : has
    CURRICULUM_TOPICS ||--o{ CURRICULUM_PREREQS : requires
    CURRICULUM_TOPICS ||--o{ CURRICULUM_PREREQS : prerequisite_of

    CURRICULUM_TOPICS ||--o{ LESSON_TEMPLATES : explains
    LESSON_TEMPLATES ||--o{ LESSON_INSTANCES : instantiates
    CURRICULUM_TOPICS ||--o{ TASK_TEMPLATES : templates
    LESSON_TEMPLATES ||--o{ TASK_SET_TEMPLATES : groups_sets
    TASK_SET_TEMPLATES ||--o{ TASK_TEMPLATES : groups_tasks
    TASK_TEMPLATES ||--o{ TASK_ITEM_TEMPLATES : items
    LESSON_INSTANCES ||--o{ TASK_SET_INSTANCES : includes_sets
    TASK_SET_INSTANCES ||--o{ TASK_INSTANCES : includes_tasks
    TASK_TEMPLATES ||--o{ TASK_INSTANCES : materializes
    TASK_INSTANCES ||--o{ TASK_INSTANCES : refers_example
    TASK_SET_TEMPLATES ||--o{ TASK_SET_TEMPLATE_ITEMS : consists_of
    TASK_TEMPLATES ||--o{ TASK_SET_TEMPLATE_ITEMS : appears_in
    TASK_INSTANCES ||--o{ TASK_ITEM_INSTANCES : appears_in
    USERS_REF_ONBOARDING ||--o{ TASK_TEMPLATES : created_by
    USERS_REF_ONBOARDING ||--o{ LESSON_TEMPLATES : created_by
    USERS_REF_ONBOARDING ||--o{ TASK_INSTANCES : created_by
    USERS_REF_ONBOARDING ||--o{ LESSON_INSTANCES : created_by
    ASSETS_REF_ONBOARDING ||--o{ TASK_TEMPLATES : definition
    ASSETS_REF_ONBOARDING ||--o{ TASK_INSTANCES : definition
    ASSETS_REF_ONBOARDING ||--o{ TASK_INSTANCES : solution_explanation
    ASSETS_REF_ONBOARDING ||--o{ LESSON_TEMPLATES : overview
    ASSETS_REF_ONBOARDING ||--o{ LESSON_INSTANCES : overview

    %% Generation jobs are modeled in docs/erd/erd-generation.mmd
